Update project structure and readme
Update view model with custom validation

--- a/MVC.SinglePage/Views/Shared/_Layout.cshtml
+++ b/MVC.SinglePage/Views/Shared/_Layout.cshtml
@@ -16,11 +16,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MVC - Single Page", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("MVC Single Page - CRUD", "Index", "Home")</li>
+                    <li><a href="http://trungk18.github.io/">Portfolio</a></li>
+                    <li><a href="http://codepen.io/trungk18/">Codepen</a></li>
+                    <li><a href="https://github.com/trungk18">Github</a></li>
+                    <li><a href="http://stackoverflow.com/users/3375906/trungk18">Stack</a></li>
                 </ul>
             </div>
         </div>
