--- a/MVC.SinglePage/Views/Home/Index.cshtml
+++ b/MVC.SinglePage/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 {
     <!--HIDDEN FIELD-->
     @Html.HiddenFor(m => m.EventCommand)
-
+    @Html.HiddenFor(m => m.Mode)
     <!--SEARCH AREA-->
     if (Model.IsSearchAreVisible)
     {
@@ -46,7 +46,39 @@
                 <h1 class="panel-title">Product Information</h1>
             </div>
             <div class="panel-body">
-                <div class="form-group"></div>
+                <!--MESSAGE AREA-->
+                <div class="row">
+                    <div class="col-sm-12">
+                        @if (!Model.IsValid)
+                        {
+                            <div class="alert alert-danger alert-dismissable" role="alert">
+                                <button type="button" class="close" data-dissmiss="alert">
+                                    <span aria-hidden="true">
+                                        &times;
+                                    </span>
+                                    <span class="sr-only">Close</span>
+                                </button>
+                                @Html.ValidationSummary(false)
+                            </div>
+                        }
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Entity.ProductName, "Product Name")
+                    @Html.TextAreaFor(m => m.Entity.ProductName, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Entity.IntroductionDate, "Introduction Date")
+                    @Html.TextAreaFor(m => m.Entity.IntroductionDate, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Entity.Url, "URL")
+                    @Html.TextAreaFor(m => m.Entity.Url, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Entity.Price, "Price")
+                    @Html.TextAreaFor(m => m.Entity.Price, new { @class = "form-control" })
+                </div>
             </div>
             <div class="panel-footer">
                 <div class="row">
@@ -65,7 +97,7 @@
             </div>
         </div>
     }
-    
+
     <!--LIST AREA-->
     if (Model.IsListAreVisible)
     {
